[package]
name = "lumi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
anyhow = "1.0.69"
async-channel = "1.8.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
futures = "0.3.27"
futures-intrusive = "0.5.0"
image = "0.24.6"
tokio = { version = "1.27.0", features = [
    "rt-multi-thread",
    "fs",
    "macros",
    "sync",
] }
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wgpu = "0.15.1"
tracing-indicatif = "0.3.0"
